Fix matchup width on mobile

--- a/frontend/src/features/games/GameMatchup.module.css
+++ b/frontend/src/features/games/GameMatchup.module.css
@@ -205,4 +205,8 @@
   .matchup {
     padding: var(--size1_5) var(--size1_5) var(--size1);
   }
+
+  .matchup-header-right {
+    display: none;
+  }
 }
